# aa-todo

./: .gitignore  CHANGELOG.md  Makefile  README.md  SECURITY.md  pyproject.toml  runtests.py  tox.ini
testauth/: settings_mypy.py  urls.py
testauth/settings/: base.py  local.py
todo/: __init__.py  apps.py  auth_hooks.py  constants.py  forms.py  models.py  urls.py  views.py
todo/migrations/: 0001_initial.py  0002_todoitem_deadline.py
todo/static/todo/: index.js
todo/templates/todo/: base.html  index.html
todo/tests/: test_todo.py
